--- a/src/styles/views/home.scss
+++ b/src/styles/views/home.scss
@@ -122,6 +122,10 @@
         // }
     }
 
+    .contact-details {
+        flex-direction: column;
+    }
+
     .hide-small {
         display: none !important;
     }
